Update VS projects to enable >2GB memory for 32b builds.

--- a/SMC/libcdio-paranoia.vcxproj
+++ b/SMC/libcdio-paranoia.vcxproj
@@ -406,6 +406,7 @@ cd $(ProjectDir)
       <ModuleDefinitionFile>libcdio-paranoia.def</ModuleDefinitionFile>
       <AdditionalDependencies>libcdiod.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir)\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <LargeAddressAware>true</LargeAddressAware>
     </Link>
     <PostBuildEvent>
       <Command>mkdir $(OutDir)\include
@@ -451,6 +452,7 @@ cd $(ProjectDir)
       <ModuleDefinitionFile>libcdio-paranoia.def</ModuleDefinitionFile>
       <AdditionalDependencies>libcdiod.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <LargeAddressAware>true</LargeAddressAware>
     </Link>
     <PostBuildEvent>
       <Command>mkdir $(OutDir)\include
@@ -823,6 +825,7 @@ cd $(ProjectDir)
       <ModuleDefinitionFile>libcdio-paranoia.def</ModuleDefinitionFile>
       <AdditionalDependencies>libcdio.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir)\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <LargeAddressAware>true</LargeAddressAware>
     </Link>
     <PostBuildEvent>
       <Command>mkdir $(OutDir)\include
@@ -879,6 +882,7 @@ cd $(ProjectDir)
       <ModuleDefinitionFile>libcdio-paranoia.def</ModuleDefinitionFile>
       <AdditionalDependencies>libcdio.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <LargeAddressAware>true</LargeAddressAware>
     </Link>
     <PostBuildEvent>
       <Command>mkdir $(OutDir)\include
